Добавляет кодогенерацию для упрощения написания апи ручек
